[Terry N.] Resurrect Viskit. Compiles and runs on JDK 16. Update  JAXB-RI. Fix Mac OS X handlers.